bpo-30347: Fixed a crash in itertools.groupby() when use the grouper iterator in the key function.